2007-05-31  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: 
	* plugins/interface_view.py: Added accessible description and
	childcount. and image description and locale (bug 440972).

2007-05-28  Eitan Isaacson  <eitan@ascender.com>

	* plugins/script_recorder.py: Added title to confirm clear dialog.

2007-05-27  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.py: Fixed bug 441201.

2007-05-24  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/__init__.py: Completed epydoc.
	* src/lib/accerciser/plugin/message.py: Completed epydoc.
	
	* src/lib/accerciser/plugin/message.py: Epydoced.
	* src/lib/accerciser/plugin/plugin_manager.py: Epydoced.
	* src/lib/accerciser/plugin/view.py: Epydoced.

2007-05-22  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accerciser.py: Added forced 
	refresh after rectangle blinks (bug 433514).
	* src/lib/accerciser/node.py: Added a signal for when the
	rectangle stops blinking.

	* plugins/interface_view.py: Fixed bug 440177.

	* plugins/interface_view.glade: 
	* plugins/interface_view.py: Limit selection view populating to 
	50 children (bug 440269).

	* src/lib/accerciser/accerciser.py: 
	* src/lib/accerciser/plugin/view.py: Skip over invisible tabs
	when focusing with alt-<num>.
	
	* configure.in:
	* plugins/script_recorder.py:
	* src/lib/accerciser/Makefile.am:
	* src/lib/accerciser/accerciser.py:
	* src/lib/accerciser/message.py:
	* src/lib/accerciser/plugin.py:
	* src/lib/accerciser/plugin:
	* src/lib/accerciser/plugin/Makefile.am:
	* src/lib/accerciser/plugin/__init__.py:
	* src/lib/accerciser/plugin/base_plugin.py:
	* src/lib/accerciser/plugin/message.py:
	* src/lib/accerciser/plugin/plugin_manager.py:
	* src/lib/accerciser/plugin/view.py:
	* src/lib/accerciser/plugin_manager.py:
	* src/lib/accerciser/view_manager.py: Moved all plugin-related
	code to a seperate package.

	* plugins/script_recorder.py:
	* src/lib/accerciser/Makefile.am: